tests/dev_server/errors/stories/js_module_throw/main.js
import "./file.js";

// if (import.meta.hot) {
//   import.meta.hot.accept()
// }

// above: comment
// above: to
// above: increase line numbers
/* before */ throw new Error("here"); /* after */
// below: comment
// below: to
// below: increase line numbers
